--- a/css/panier.css
+++ b/css/panier.css
@@ -1,3 +1,15 @@
+@import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+* {
+  font-family: "Nunito";
+  font-weight: 800;
+  color: #0f172b;
+}
+hr {
+  color: #000;
+  background: #000;
+  width: 90%;
+}
 body {
   display: flex;
   justify-content: center;
@@ -14,18 +26,38 @@ body {
 .panier-info {
   width: 70%;
   height: 100%;
+  h1 {
+    font-size: 40px;
+  }
 }
 .panier-prix {
-  background: #f50;
+  background: #fea116;
   height: 100%;
   width: 30%;
 }
 #p-t {
   display: flex;
   align-items: center;
-  border: 1px solid #000;
 }
 i {
   color: #fea116;
-  font-size: 32px;
+  font-size: 40px;
+}
+.panier-plat {
+  display: flex;
+  justify-content: space-evenly;
+  width: 50%;
+  border: solid 1px #000;
+  align-items: center;
+  input {
+    border: none;
+    background: #0f172b;
+    color: #fea116;
+    width: 42px;
+  }
+}
+
+img {
+  width: 40px;
+  height: 40px;
 }
