--- a/css/panier.css
+++ b/css/panier.css
@@ -16,16 +16,9 @@ body {
   align-items: center;
 }
 .panier {
-  width: 60vw;
   height: 40vh;
-  border: 1px solid #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .panier-info {
-  width: 70%;
-  height: 100%;
   h1 {
     font-size: 40px;
   }
@@ -35,29 +28,28 @@ body {
   height: 100%;
   width: 30%;
 }
-#p-t {
-  display: flex;
-  align-items: center;
-}
 i {
   color: #fea116;
   font-size: 40px;
 }
 .panier-plat {
-  display: flex;
-  justify-content: space-evenly;
-  width: 50%;
-  border: solid 1px #000;
-  align-items: center;
   input {
-    border: none;
     background: #0f172b;
     color: #fea116;
-    width: 42px;
+    width: 60px;
+  }
+  select,
+  option {
+    background: #0f172b;
+    color: #fea116;
+    width: 60px;
+  }
+  label {
+    color: #fea116;
   }
 }
 
 img {
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
 }
