--- a/css/detail.css
+++ b/css/detail.css
@@ -3,3 +3,7 @@
 font-family: "Nunito";
 font-weight: 800;
 }
+header{
+text-transform: uppercase;
+ transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
