--- a/css/Contact.css
+++ b/css/Contact.css
@@ -10,3 +10,16 @@ header{
 #mobile-menu{
     z-index: 2;
 }
+
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border-width: 0;
+}
