--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -113,6 +113,9 @@ nav button i {
         display: block;
     }
 }
+
+
+
 /******************************** end styling navbar  *************************/
 
 
@@ -156,9 +159,14 @@ nav button i {
     text-align: center;
 }
 
-.header-content .header-img {
+.header-content .img-holder {
     width: 470px;
     height: 470px;
+}
+
+.header-content .header-img {
+    min-height:  100%;
+    min-width: 100%;
     animation: rotation 15s linear infinite;
 }
 
