--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -160,7 +160,7 @@ nav button i {
 }
 
 .header-content .img-holder {
-    width: 470px;
+    min-width: 470px;
     height: 470px;
 }
 
@@ -196,7 +196,8 @@ main {
 }
 
 main .first-part {
-    margin: 3rem auto;
+    margin: 1rem auto;
+    margin-bottom: 3rem;
     display: flex;
     align-items: center;
     gap: .5rem;
@@ -324,7 +325,7 @@ main .first-part {
 
 .third-part {
     text-align: center;
-    padding: 4rem 2rem;
+    padding: 1rem 2rem;
 }
 
 .menu-header p {
@@ -417,7 +418,7 @@ main .first-part {
 
 .fourth-part {
     text-align: center;
-    padding: 4rem 2rem;
+    padding: 1rem 2rem;
 }
 
 .fourth-part > div:first-child p {
@@ -498,7 +499,7 @@ main .first-part {
 .fifth-part {
     background-color: white;
     text-align: center;
-    padding: 4rem 2rem;
+    padding: 1rem 2rem;
 }
 
 .testimonial-header p {
