--- a/css/panier.css
+++ b/css/panier.css
@@ -3,6 +3,10 @@
 html {
   font-size: 16px;
 }
+body{
+  display: flex;
+  flex-direction: column;
+}
 hr {
   color: #0f172b;
   background: #0f172b;
@@ -11,8 +15,8 @@ hr {
 .Z{
   display: none;
   justify-content: center;align-items: center;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: #0005;
   position: fixed;
   z-index: 11;
