--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -7,6 +7,11 @@
     font-family: "Nunito", sans-serif;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 header {
     height: 100vh;
     background-image: url(/images/Overlay+Background\ \(2\).png);
