--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 * {
     padding: 0;
     margin: 0;
@@ -86,13 +88,6 @@ nav button i {
 
 #burger {
     display: none;
-    position: absolute;
-    top: 1.5rem;
-    right: 1rem;
-    color: white;
-    background-color: #FEA116;
-    font-size: 2rem;
-    border-radius: 5px;
 }
 
 @media (max-width: 768px) {
@@ -100,14 +95,14 @@ nav button i {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 0; 
-        right: 0; 
-        width: 100%; 
+        top: 100%;
+        right: 0;
+        width: 100%;
         background-color: #0f172b;
         padding: 1rem;
         gap: 1rem;
         z-index: 10;
-        border-top: 2px solid #FEA116; 
+        border-top: 2px solid #FEA116;
     }
 
     .nav-right.active {
@@ -116,6 +111,15 @@ nav button i {
 
     #burger {
         display: block;
+        position: absolute;
+        top: 1.5rem;
+        right: 1rem;
+        color: white;
+        background-color: #FEA116;
+        font-size: 2rem;
+        border-radius: 5px;
+        cursor: pointer;
+        padding: 0.2rem 0.4rem;
     }
 }
 
@@ -412,6 +416,25 @@ main .first-part {
     font-weight: bold;
 }
 
+.carousel {
+    display: flex;               
+    overflow-x: auto;            
+    scroll-behavior: smooth;     
+    gap: 1rem;                   
+    scroll-snap-type: x mandatory; 
+    padding: 10px;
+}
+
+.menu-card {
+    flex: 0 0 calc(33.33% - 1rem); 
+    scroll-snap-align: start;      
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    overflow: hidden;
+}
+
+
 @media (max-width: 768px) {
     .menu-items {
         flex-direction: column;
@@ -504,7 +527,7 @@ main .first-part {
 .fifth-part {
     background-color: white;
     text-align: center;
-    padding: 1rem 2rem;
+    padding: 2rem 1rem;
 }
 
 .testimonial-header p {
@@ -521,11 +544,13 @@ main .first-part {
     margin-bottom: 3rem;
 }
 
-.testimonials {
-    display: inline-block;
-    width: 300px;
-    margin: 0 1rem;
-    transition:  .3s ;
+
+#testimonial-container {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    overflow: hidden; 
+    scroll-behavior: smooth;
 }
 
 .testimonial-card {
@@ -534,11 +559,14 @@ main .first-part {
     border-radius: 10px;
     padding: 2rem;
     min-height: 250px;
+    min-width: 300px;
+    flex-shrink: 0; 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    transition: background-color 0.3s;
+    transition: transform 0.3s, background-color 0.3s;
+    border-radius: 15px;
 }
 
 .testimonial-card i {
@@ -602,7 +630,7 @@ main .first-part {
     background-color: #ddd;
     border-radius: 50%;
     cursor: pointer;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .dot.active {
@@ -610,12 +638,14 @@ main .first-part {
     transform: scale(1.3);
 }
 
-
 @media (max-width: 768px) {
-    .testimonials {
-        display: block;
-        margin: 1rem auto;
+    #testimonial-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .testimonial-card {
         width: 90%;
+        min-width: auto;
     }
 }
-
