--- a/css/panier.css
+++ b/css/panier.css
@@ -1,20 +1,21 @@
 @import "tailwindcss";
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
-* {
-  font-family: "Nunito";
-  font-weight: 800;
-  color: #0f172b;
+html {
+  font-size: 16px;
 }
 hr {
   color: #0f172b;
   background: #0f172b;
   width: 90%;
 }
-body {
+.Z{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: center;align-items: center;
+  width: 100vw;
   height: 100vh;
+  background: #0005;
+  position: fixed;
+  z-index: 11;
 }
 .panier-info {
   h1 {
@@ -51,7 +52,11 @@ body {
   height: 80px;
 }
 .panier {
-  height: 400px;
+  display: flex;
+  position: fixed;
+  z-index: 50;
+  height: 500px;
+  background: white;
   /*  */
   /*  */
 }
@@ -72,19 +77,31 @@ body {
 .panier-plat img {
   border: solid 1px;
 }
+.pm{
+  display: flex;
+}
 
 /* Paiment */
 .paiment {
   display: none;
+  position: fixed;
+  z-index: 50;
+  background: #fff;
 }
-.paiment h1,
-h2 {
+.paiment h2 {
   color: #000;
+  font-size: 2rem;
+  font-weight: bold;
 }
 .paiment input {
-  border: #555 1px solid;
-  width: 60%;
+  border: #888 1px solid;
+  width: 100%;
   border-radius: 5px;
+  font-size: 24px;
+}
+.paiment input::placeholder {
+  color: #bbb;
+  font-size: 1rem;
 }
 .paiment * {
   color: #000;
@@ -98,6 +115,14 @@ h2 {
 .c-achat {
   background-color: #fea116;
   color: #0f172b;
+  border-radius: 5px;
+  font-size: 1.5rem;
+}
+.adress {
+  width: 80%;
+  grid-template-columns: 40% 40%;
+  justify-content: center;
+  gap: 10px;
 }
 .address input {
   width: 100%;
@@ -114,8 +139,12 @@ h2 {
   grid-column: 2/3;
 }
 /* mobile */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 700px) {
+  html {
+    font-size: 8px;
+  }
   .panier {
+    top :5%;
     height: 90%;
     width: 90%;
     flex-direction: column;
@@ -152,16 +181,26 @@ h2 {
   .pc {
     width: 100%;
   }
+  /* paiement */
   .paiment input {
     border: #555 1px solid;
-    width: 40%;
+    width: 45%;
     border-radius: 5px;
+    padding: 1rem;
   }
-  .address {
-    display: grid;
-    grid-template-rows: repeat(4, 100px);
-    grid-template-columns: 100px;
-    gap: 100px;
-    background: #000;
+  .paiment h2 {
+    font-size: 3rem;
+  }
+  .in-email {
+    width: 100%;
+  }
+  .adress {
+    width: 100%;
+    grid-template-columns: 40% 40%;
+    justify-content: center;
+    gap: 10px;
+  }
+  .adress input {
+    width: 100%;
   }
 }
