--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -26,7 +26,7 @@ footer {
 
 header {
     height: 100vh;
-    background-image: url(/images/Overlay+Background\ \(2\).png);
+    background-image: url(/images/Overlay+Background.png);
     background-position: center;
     background-size: cover;
     overflow: hidden;
