--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -41,7 +41,7 @@ nav {
     width: 100%;
     z-index: 100;
     padding: 1rem 5%;
-    background-color: transparent;
+    background-color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -141,7 +141,7 @@ nav button i {
 
 .header-content {
     width: 90%;
-    margin: 3rem auto;
+    margin: 4rem auto;
     display: flex;
     align-items: center;
     gap: 5rem;
